--- a/main/templates/main/main-layout.html
+++ b/main/templates/main/main-layout.html
@@ -86,7 +86,7 @@
                 <li><a href="{% url 'customer_placeorder_order' %}">Cart</a></li>
                 <li><a href="/#contact">Contact</a></li>
             </ul>
-            <h1><img src="{% static 'img/logo.jpg' %}" width="30"> Legit Busog Restaurant</h1>
+            <h1 class="header-logo"><img src="{% static 'img/logo.jpg' %}" width="30"> Legit Busog Restaurant</h1>
         </div>
     </nav>
 
