--- a/main/templates/main/customer/completedorder.html
+++ b/main/templates/main/customer/completedorder.html
@@ -98,6 +98,7 @@
 					<table id="example" class="table">
 						<thead>
 							<tr>
+								<th>Date Ordered</th>
 								<th>Order No.</th>
 								<th>Order Mode</th>
 								<th>Status</th>
@@ -108,6 +109,7 @@
 						{% for tran in trans %}
 						<tbody>
 							<tr>
+								<td>{{ tran.date_created }}</td>
 								<td>{{ tran.transaction_id }}</td>
 								<td>{{ tran.order_mode }}</td>
 								<td class="text-success">{{ tran.status }}</td>
