--- a/main/templates/main/pages/singleorder.html
+++ b/main/templates/main/pages/singleorder.html
@@ -35,43 +35,46 @@ List of Food
         {% endfor %}
     </div>
     <div class="seller container2">
-        {% for order in orders %}
-        <div class="container-product">
-            <div class="product-image" style="margin: 10px auto;">
-                <img src="{{ order.product.image.url }}" alt="img">
-            </div>
-            <div class="product-details" style="align-self: center;">
-                <div class="product-header">
-                    <h3>{{ order.product.name }}</h3>
-                    <h1>{{ order.product.price }}.00</h1>
+        <div class="foodproduct">
+            {% for order in orders %}
+            <div class="container-product">
+                <div class="product-image" style="margin: 10px auto;">
+                    <img src="{{ order.product.image.url }}" alt="img">
                 </div>
-                <div class="cont-mo">
-                    <div class="more-details">
-                        <table class="order-table">
-                            <thead>
-                                <tr>
-                                    <th>Quantity</th>
-                                    <th>Price</th>
-                                </tr>
-                            </thead>
-                            <tbody>
-                                <tr>
-                                    <td>{{ order.quantity }}</td>
-                                    <td>{{ order.product.price }}.00</td>
-                                </tr>
-                            </tbody>
-                            <tfoot>
-                                <tr>
-                                    <td>Total Amount:</td>
-                                    <td>{{ order.total_amount }}.00</td>
-                                </tr>
-                            </tfoot>
-                        </table>
+                <div class="product-details" style="align-self: center;">
+                    <div class="product-header">
+                        <h3>{{ order.product.name }}</h3>
+                        <h1>{{ order.product.price }}.00</h1>
+                    </div>
+                    <div class="cont-mo">
+                        <div class="more-details">
+                            <table class="order-table">
+                                <thead>
+                                    <tr>
+                                        <th>Quantity</th>
+                                        <th>Price</th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    <tr>
+                                        <td>{{ order.quantity }}</td>
+                                        <td>{{ order.product.price }}.00</td>
+                                    </tr>
+                                </tbody>
+                                <tfoot>
+                                    <tr>
+                                        <td>Total Amount:</td>
+                                        <td>{{ order.total_amount }}.00</td>
+                                    </tr>
+                                </tfoot>
+                            </table>
+                        </div>
                     </div>
                 </div>
             </div>
+            {% endfor %}
         </div>
-        {% endfor %}
+       
         <form action="" method="POST">
             {% csrf_token %}
             <table class="order-table">
